Fix tables styling to not wrap so much

--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -16,6 +16,16 @@
 	padding: 0.125em 0.3em;
 }
 
+.sl-markdown-content table:not(:where(.not-content *)) {
+	width: max-content;
+	max-width: 100%;
+}
+
+.sl-markdown-content table :not(pre) > code:not(:where(.not-content *)) {
+	overflow-wrap: normal;
+	white-space: nowrap;
+}
+
 .sl-markdown-content .sl-steps > li > p {
 	color: var(--foreground);
 }
